@@ -1,5 +1,7 @@
 2008-12-21  Andreas Kirschbaum
 
+	* Do not highlight floor as "selected".
+
 	* Make inventory selector more visible.
 
 	* Do not block the GUI while metaserver queries. Regularly update server
